switch to kotlin for gradle drop unregistring commands, since it is unrelyable since brigadier [Bump] minecraft, gradle [Fix] empty exemtion blocks config loading